objects/Sub_class_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Sub-class Settings</relationshipLabel>
        <relationshipName>Sub_class_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub-class Setting</label>
    <nameField>
        <displayFormat>SCS-{000000}</displayFormat>
        <label>Sub-class Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub-class Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>